# AeonEngine

./: .gitattributes  .gitignore  .travis.yml  .vcpkg  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  TODO.md  appveyor.yml  astylerc  linux64.yml  mingw64.yml  msvc64.yml  msys2.yml  vcpkg-configuration.json  vcpkg.json
application/: CMakeLists.txt  Main.cpp  Window.h  fps.xhtml  linux.cpp  macos.mm  windows.cpp
application/linux/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  Main.cpp
application/windows/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  Main.cpp
electron/: CMakeLists.txt  Module.cpp  Scene.cpp  Scene.h  WinDelayLoadHook.cpp  Window.cpp  Window.h  index.html  main.js  package.json
engine/: CMakeLists.txt
engine/components/: CMakeLists.txt  Camera.cpp  Camera.h  CharacterController.cpp  CharacterController.hpp  CollisionComponent.cpp  CollisionComponent.hpp  DirectionalLight.cpp  DirectionalLight.h  FreeCamera.cpp  FreeCamera.hpp  ModelComponent.cpp  ModelComponent.h  ModelController.cpp  ModelController.h  ModelData.cpp  ModelData.h  OrbitalCamera.cpp  OrbitalCamera.hpp  OverTheShoulderCamera.cpp  OverTheShoulderCamera.hpp  Plugin.cpp  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
engine/core/: ActionMap.cpp  AeonEngine.cpp  Animation.cpp  Base64.cpp  BufferAccessor.cpp  CRC.cpp  Clock.cpp  Collision.cpp  CommonWindow.cpp  Component.cpp  Configuration.cpp  Configuration.h  Controller.cpp  FrameBuffer.cpp  GraphicalUserInterface.cpp  GuiOverlay.cpp  Image.cpp  InitializeFinalize.cpp  InputSystem.cpp  LogLevel.cpp  Material.cpp  MemoryPool.cpp  Mesh.cpp  MessageWrapper.cpp  Model.cpp  ModelInstance.cpp  Node.cpp  NodeData.cpp  Octree.cpp  Overlay.cpp  Package.cpp  Pipeline.cpp  Program.cpp  Property.cpp  ProtoBufUtils.cpp  Renderer.cpp  Resource.cpp  ResourceCache.cpp  ResourceFactory.cpp  Scene.cpp  (+14 more)
engine/core/winapi/: GameWindow.cpp  GameWindow.h
engine/core/x11/: GameWindow.cpp  GameWindow.h
engine/core/xlib/: GameWindow.cpp  GameWindow.h
engine/gui/aeongui/: AeonGamesGUI.cpp  AeonGamesGUI.h  AeonGuiOverlay.cpp  AeonGuiOverlay.hpp  CMakeLists.txt  Plugin.cpp
engine/images/: CMakeLists.txt
engine/images/hdr/: CMakeLists.txt  Plugin.cpp  RadianceImage.cpp  RadianceImage.h
engine/images/png/: CMakeLists.txt  Plugin.cpp  PngImage.cpp  PngImage.h
engine/include/: Configuration.h  Decoder.h  DependencyMap.h  Factory.h  ProtoBufHelpers.h
engine/input/desktop/: CMakeLists.txt  DesktopInput.cpp  DesktopInput.hpp  Plugin.cpp
engine/math/: 3DMath.h  AABB.cpp  Frustum.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Matrix4x4.h  Plane.cpp  Quaternion.cpp  Transform.cpp  Transform.h  Vector2.cpp  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
engine/nodes/: CMakeLists.txt  MeshComponent.cpp  MeshComponent.h  MeshNode.cpp  MeshNode.h  ModelComponent.cpp  ModelComponent.h  Plugin.cpp
engine/renderers/: README.md
engine/renderers/opengl/: CMakeLists.txt  GenerateProxyFunctions.cmake.in  Material.cpp  Material.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLBuffer.hpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLFrameBuffer.hpp  OpenGLFunctions.cpp  OpenGLFunctions.h  OpenGLFunctions.hpp  OpenGLImage.cpp  OpenGLImage.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLMaterial.hpp  OpenGLMemoryPoolBuffer.cpp  OpenGLMemoryPoolBuffer.h  OpenGLMemoryPoolBuffer.hpp  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLMesh.hpp  OpenGLModel.cpp  OpenGLModel.h  OpenGLOverlay.cpp  OpenGLOverlay.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLPipeline.hpp  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderer.hpp  OpenGLRendererWindows.cpp  OpenGLRendererX.cpp  OpenGLSkeleton.cpp  OpenGLSkeleton.h  (+39 more)
engine/renderers/vulkan/: CMakeLists.txt  MacOSMetalHelper.mm  Plugin.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanBuffer.hpp  VulkanDescriptorSet.h  VulkanDescriptorSet.hpp  VulkanImage.cpp  (+44 more)
engine/scenegraph/: Model.cpp  Node.cpp  Node.h  Scene.cpp  Scene.h
proto/: CMakeLists.txt  Configuration.proto  animation.proto  collision.proto  configuration.proto  framebuffer.proto  geometry.proto  material.proto  matrix4x4.proto  mesh.proto  model.proto  modelcontroller.proto  node.proto  pipeline.proto  plane.proto  program.proto  property.proto  quaternion.proto  reference.proto  sampler.proto  scene.proto  shader_program.proto  skeleton.proto  transform.proto  tree.proto  vector2.proto  vector3.proto  vector4.proto
tests/: AABBTests.cpp  ArchiveTests.cpp  CMakeLists.txt  CRCTests.cpp  CollisionTests.cpp  ComputeTests.cpp  ContainerTests.cpp  CubePrefilterTests.cpp  DecoderTests.cpp  DependencyMapTests.cpp  FlyWeightTests.cpp  FrustumTests.cpp  HdrDecoderTests.cpp  Main.cpp  MaterialTests.cpp  MatrixTests.cpp  MessageWrapperTests.cpp  NodeTests.cpp  OctreeTests.cpp  PackageTests.cpp  PropertyTests.cpp  QuaternionTests.cpp  ResourceCacheTests.cpp  ResourceIdTests.cpp  SceneTests.cpp  TransformTests.cpp  TreeTests.cpp  UniqueAnyPtrTests.cpp  UniqueResourceTests.cpp  UntypedRefTests.cpp  test.proto
tools/aeontool/: Base64.cpp  Base64.h  CMakeLists.txt  CodeFieldValuePrinter.hpp  Convert.cpp  Convert.h  Index.cpp  Index.h  Main.cpp  Pack.cpp  Pack.h  PipelineTool.cpp  PipelineTool.h  README.md  Tool.h
tools/modelviewer/: CMakeLists.txt  Debug.cpp  Debug.h  EngineWindow.cpp  EngineWindow.h  Main.cpp  MainWindow.cpp  MainWindow.h  ModelViewer.cpp  ModelViewer.h  RendererSelectDialog.cpp  RendererSelectDialog.h  modelviewer.qrc
tools/worldeditor/: CMakeLists.txt  CameraSettings.cpp  CameraSettings.h  Debug.cpp  Debug.h  EngineWindow.cpp  EngineWindow.h  Grid.cpp  Grid.h  GridSettings.cpp  GridSettings.h  MacOSMetalHelper.mm  Main.cpp  MainWindow.cpp  MainWindow.h  MessageWrapper.cpp  MessageWrapper.h  NodeEditor.cpp  NodeEditor.h  NodeEditorView.cpp  NodeEditorView.h  NodeView.cpp  NodeView.h  NodeWindow.cpp  NodeWindow.h  RendererSelectDialog.cpp  RendererSelectDialog.h  SceneWindow.cpp  SceneWindow.h  SettingsDialog.cpp  SettingsDialog.h  WorldEditor.cpp  WorldEditor.h  worldeditor.entitlements  worldeditor_dynamic.qrc  worldeditor_static.qrc
(+1775 files in other folders)
